Edited styles of pagination and components, icons

--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -12,8 +12,9 @@
     align-items: center;
     transition: .3s;
     text-decoration: none;
-}
-.chips:hover {
-    background-color: #000;
-    color: #F2F5FA;
+
+    &:hover {
+        background-color: #000;
+        color: #F2F5FA;
+    }
 }
