--- a/src/components/Accordion/Accrodion.module.scss
+++ b/src/components/Accordion/Accrodion.module.scss
@@ -1,87 +1,91 @@
 .container {
-    margin: 30px 10px;
+    margin: 20px 10px;
     display: flex;
     flex-direction: row;
     width: 100%;
     text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
-}
-.wrapper {
-    width: 90%;
-}
-.main {
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-}
+    .wrapper {
+        width: 94%;
 
-.text__hint {
-    margin: 2px 20px;
-    color: #A7A7A7;
-    font-weight: bold;
-    font-size: 20px;
-    text-align: center;
-    width: 12%;
-}
+        .main {
+            border-radius: 10px;
+            width: 100%;
+            padding: 10px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #fff;
+            box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+        }
 
-.text__hint_light {
-    margin: 2px 20px;
-    color: #A7A7A7;
-    font-size: 20px;
-    justify-self: flex-end;
-    text-align: center;
-}
+        .text__hint {
+            margin: 2px 20px;
+            color: #A7A7A7;
+            font-weight: bold;
+            font-size: 20px;
+            text-align: center;
+            width: 12%;
+        }
 
-.text__value {
-    width: 12%;
-    margin: 2px 20px;
-    font-size: 20px;
-    color: #000;
-    font-weight: bold;
-    text-align: center;
-}
+        .text__hint_light {
+            margin: 2px 20px;
+            color: #A7A7A7;
+            font-size: 20px;
+            justify-self: flex-end;
+            text-align: center;
+        }
 
-.img {
-    cursor: pointer;
-}
+        .text__value {
+            width: 12%;
+            margin: 2px 20px;
+            font-size: 20px;
+            color: #000;
+            font-weight: bold;
+            text-align: center;
+        }
 
-.open_more__block {
-    display: flex;
-    justify-content: flex-end;
-}
+        .img {
+            cursor: pointer;
+            margin-right: 5px;
+        }
 
-.table__low {
-    margin-top: 5px;
-    padding-top: 10px;
-    width: 100%;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
+        .open_more__block {
+            display: flex;
+            justify-content: flex-end;
+        }
 
-.table__line {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    padding-top: 0;
-    text-align: center;
-}
+        .table__low {
+            border-radius: 10px;
+            margin-top: 5px;
+            padding-top: 10px;
+            width: 100%;
+            background-color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+        }
 
-.checkbox {
-    align-self: center;
+        .table__line {
+            border-radius: 10px;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            padding-top: 0;
+            text-align: center;
+        }
+
+        .checkbox {
+            align-self: center;
+        }
+    }
 }
