--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,72 +1,67 @@
-.circle__page {
-    cursor: pointer;
-    background-color: #000;
-    color: #fff;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    vertical-align: middle;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    border: 2px solid transparent;
-    transition: .3s;
-    padding: 5px;
-}
-.circle__page_sec {
-    cursor: pointer;
-    background-color: #fff;
-    color: #000;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    vertical-align: middle;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    border: 2px solid #000;
-    transition: .3s;
-    padding: 5px;
-}
-.circle__page_sec:hover {
-    background-color: #000;
-    border-color: transparent;
-    color: #fff;
-}
-
-/*.circle__page:hover {*/
-/*    background-color: #fff;*/
-/*    color: #000;*/
-/*    border-color: #000;*/
-/*}*/
-
-
 .container {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+
+    .circle__page {
+        cursor: pointer;
+        background-color: #000;
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 50%;
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        vertical-align: middle;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 5px;
+        border: 2px solid transparent;
+        transition: .3s;
+        padding: 5px;
+    }
+    .circle__page_sec {
+        cursor: pointer;
+        background-color: #fff;
+        color: #000;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 50%;
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        vertical-align: middle;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 5px;
+        border: 2px solid #000;
+        transition: .3s;
+        padding: 5px;
+
+        &:hover {
+            background-color: #000;
+            border-color: transparent;
+            color: #fff;
+        }
+    }
+    .img {
+        text-align: center;
+        cursor: pointer;
+        width: 30px;
+        height: 30px;
+        border: 3px solid transparent;
+        border-radius: 50%;
+        transition: .3s;
+        padding: 5px;
+
+        &:hover {
+            border-color: #000;
+        }
+    }
 }
 
-.img {
-    text-align: center;
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    border: 3px solid transparent;
-    border-radius: 50%;
-    transition: .3s;
-    padding: 5px;
-}
 
-.img:hover {
-    border-color: #000;
-}
