--- a/src/components/ProductListItem/ProductListItem.module.scss
+++ b/src/components/ProductListItem/ProductListItem.module.scss
@@ -6,82 +6,82 @@
     width: 100%;
     margin: 10px auto;
 
+    .main {
+        border-radius: 10px;
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 20px;
+        background-color: #fff;
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+
+        .product__title__block {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .product__title__first {
+                color: #000;
+                font-size: 22px;
+            }
+
+            .product__subtitle {
+                color: #A7A7A7;
+                font-size: 15px;
+            }
+        }
+
+        .product__price__block {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .product__price {
+                margin-right: 20px;
+                color: #000;
+                font-size: 18px;
+
+            }
+
+            .product__price__sub {
+                color: #000;
+                font-size: 18px;
+                font-weight: bold;
+            }
+        }
+
+        .product__category {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .product__group {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .product__title {
+            margin-right: 18px;
+            color: #000;
+            font-size: 20px;
+
+        }
+        .thumb {
+            padding-left: 50px;
+            width: 50px;
+            height: 50px;
+        }
+    }
 }
 
-.main {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 20px;
-    background-color: #fff;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 
-}
-
-.product__title__block {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.product__price__block {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.product__category {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.product__group {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.product__title {
-    margin-right: 18px;
-    color: #000;
-    font-size: 20px;
-
-}
-
-.product__title__first {
-    color: #000;
-    font-size: 22px;
-}
-
-.product__subtitle {
-    color: #A7A7A7;
-    font-size: 15px;
-}
-
-.product__price {
-    margin-right: 20px;
-    color: #000;
-    font-size: 18px;
-
-}
-
-.product__price__sub {
-    color: #000;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.thumb {
-    padding-left: 50px;
-    width: 50px;
-    height: 50px;
-}
 
 
