--- a/src/components/Accordion/Accrodion.module.scss
+++ b/src/components/Accordion/Accrodion.module.scss
@@ -45,7 +45,7 @@
             font-size: 20px;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: center;
         }
 
         .img {
