--- a/src/components/ProductListItem/ProductListItem.module.scss
+++ b/src/components/ProductListItem/ProductListItem.module.scss
@@ -27,6 +27,12 @@
                 color: #000;
                 font-size: 22px;
             }
+            .product__title__first__price {
+                color: #000;
+                font-size: 22px;
+                width: 100%;
+
+            }
 
             .product__subtitle {
                 color: #A7A7A7;
