--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -58,7 +58,8 @@
                     color: #A7A7A7;
                     font-weight: bold;
                     align-self: center;
-                    margin: 0 10px;
+                    margin: 7px 10px 0 10px;
+
                 }
             }
 
