--- a/src/components/UI/Modals/ModalAccept/ModalAccept.module.scss
+++ b/src/components/UI/Modals/ModalAccept/ModalAccept.module.scss
@@ -20,7 +20,7 @@ html,body{
 .modal__content {
     border-radius: 20px;
     max-width: 500px;
-    height: 350px;
+
     background-color: #fff;
     text-align: center;
     padding: 20px 40px;
@@ -50,6 +50,7 @@ html,body{
 }
 
 .btns__choose {
+    margin-top: 100px;
     width: 100%;
     display: flex;
     flex-direction: row;
