--- a/src/components/ProductListItem/ProductListItem.module.scss
+++ b/src/components/ProductListItem/ProductListItem.module.scss
@@ -18,10 +18,15 @@
         box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 
         .product__title__block {
+            text-align: left;
+            width: 30%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            align-self: center;
+
+
 
             .product__title__first {
                 color: #000;
@@ -43,17 +48,21 @@
         .product__price__block {
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
+            width: 15%;
+            text-align: left;
 
             .product__price {
                 margin-right: 20px;
+                justify-self: flex-start;
                 color: #000;
                 font-size: 18px;
 
             }
 
             .product__price__sub {
+                justify-self: flex-start;
                 color: #000;
                 font-size: 18px;
                 font-weight: bold;
@@ -61,6 +70,7 @@
         }
 
         .product__category {
+            width: 10%;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -68,6 +78,7 @@
         }
 
         .product__group {
+            width: 15%;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -81,8 +92,8 @@
 
         }
         .thumb {
-            padding-left: 50px;
-            width: 100px;
+            width: 50px;
+            margin-left: 40px;
             height: 50px;
         }
     }
