--- a/src/components/ProductListItem/ProductListItem.module.scss
+++ b/src/components/ProductListItem/ProductListItem.module.scss
@@ -42,6 +42,8 @@
             .product__subtitle {
                 color: #A7A7A7;
                 font-size: 15px;
+                width: 100%;
+                text-align: left;
             }
         }
 
