--- a/src/components/ProductListItem/ProductListItem.module.scss
+++ b/src/components/ProductListItem/ProductListItem.module.scss
@@ -94,10 +94,16 @@
 
         }
         .thumb {
+            flex-wrap: wrap;
             width: 50px;
             margin-left: 40px;
             height: 50px;
+            color: black;
+            font-size: 35px;
+
+
         }
+
     }
 }
 
