--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -27,9 +27,19 @@
 
     .page__main {
         width: 100%;
-
         background-color: $page-main-background-color;
         padding: 10px;
+
+        .products__container {
+            padding: 0 10px;
+            width: 100%;
+            max-height: 75vh;
+            overflow-y: scroll;
+            position: relative;
+            bottom: 0;
+            right: 0;
+            left: 0;
+        }
 
         .main__top__panel {
             margin: 10px 50px;
